# ghosttype

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  go.mod  go.sum  main.go
.github/workflows/: go.yml  release.yml
cmd/: batch-eval.go  benchmark.go  ensemble-eval.go  eval.go  generate-balanced.go  generate.go  github-extract.go  load_history.go  profile.go  quick-eval.go  root.go  root_test.go  suggest.go  tui.go
cmd/benchmark/: benchmark.go  profile.go
cmd/eval/: batch-eval.go  ensemble-eval.go  eval.go_
cmd/generate/: generate.go
history/: zsh.go  zsh_test.go
internal/: db.go  suggest.go  sync.go
internal/history/: bash.go  loader.go  loader_test.go  mock_loader.go  shell.go  shell_test.go  zsh_test.go
internal/logger/: logger.go  warn_llm.go
internal/logger.go/: logger.go
internal/model/: generate_model.go  generate_model_test.go  model_init_event.go  ollama_notifier.go
internal/ollama/: mock_client.go  ollama_client.go  ollama_client_test.go
internal/parser/: zshrc.go  zshrc_test.go
marcov/: model.go
model/: suggest.go
ollama/: httpclient_test.go  ollamaClient.go
parser/: zshrc.go
rust/: Cargo.toml  local.db
rust/src/: core.rs  main.rs  tui.rs
rust/src/model/: embedding.rs  ensemble.rs  llm.rs  mod.rs  prefix.rs  sqlite.rs  suggestion.rs
rust/src/model/alias/: mod.rs
script/: install.sh  launch-time-test.sh  predict.zsh
src/: core.rs  tui.rs
store/: db.go  migrate.go
testdata/: eval.csv  eval_auto.jsonl  eval_balanced.csv  github_commands.json  history_eval.jsonl
tui/: session.go
ui/: model.go
(+63 files in other folders)
