[package]
name = "goasttype"
version = "0.1.0"
edition = "2021"

[dependencies]
libsql-client = "0.33.4"  
libsql = "0.9.24"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

clap = { version = "4", features = ["derive"] }
fuzzy-matcher = "0.3"
ahash = "0.8"
# TUI
ratatui = "0.26"
crossterm = "0.27"
directories = "5"
unicode-width = "0.1"
once_cell = "1"
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
hex = "0.4"
